<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:maxWidth="540dp"
    android:background="@drawable/shape_backgroung_while">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLength="20"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/text_hint"
        android:textSize="24sp"
        android:textColor="#4e86fd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:id="@+id/tv_content"
        android:textSize="20sp"
        android:text="机器人正在执行任务,是否停止当前任务,执行点击操作?机器人正在执行任务,是否停止当前任务,执行点击操作?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        app:layout_constraintTop_toBottomOf="@id/tv_content"
        android:id="@+id/divider"
        android:background="@color/text_gray"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <View
        android:id="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_width="1px"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/text_gray"
        />

    <TextView
        app:layout_constraintBottom_toBottomOf="@id/divider2"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/divider2"
        android:id="@+id/tv_sure"
        android:text="@string/text_sure"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textColor="#4e86fd"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintBottom_toBottomOf="@id/divider2"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="@id/divider2"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tv_cancel"
        android:textSize="20sp"
        android:text="@string/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>