<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#223a60"
    tools:context=".face.FaceUploadActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/face_upload_back"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_back_"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>


    <LinearLayout
        android:id="@+id/ic_user_layout"
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:orientation="vertical"
        android:background="@mipmap/face_upload_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/line"
        app:layout_constraintBottom_toTopOf="@+id/but_list_updata">

        <ImageView
            android:id="@+id/ic_user_image"
            android:layout_width="200dp"
            android:layout_height="260dp"
            android:scaleType="fitXY"
            />
    </LinearLayout>
    <TextView
        android:text="请选择图片"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ic_user_layout"
        app:layout_constraintRight_toLeftOf="@id/line"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TableLayout
        android:id="@+id/tl_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ic_user_layout"
        app:layout_constraintBottom_toBottomOf="@id/ic_user_layout"
        app:layout_constraintLeft_toRightOf="@id/line">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/face_upload_type"
                android:textSize="20dp"
                android:textColor="@color/title_text"
                android:gravity="end|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_list_type"
                android:textColor="#fff"
                android:text="白名单"
                android:textSize="20dp"
                android:background="@drawable/shape_item_bg"
                android:gravity="center_vertical"
                android:drawableEnd="@mipmap/ic_right"
                android:layout_width="200dp"
                android:layout_height="40dp"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/face_upload_name"
                android:textSize="20dp"
                android:gravity="end|center_vertical"
                android:textColor="@color/title_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_list_name"
                android:textColor="#fff"
                android:maxLength="16"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/shape_item_bg"
                android:layout_width="200dp"
                android:layout_height="40dp"/>

        </TableRow>
        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/face_upload_sex"
                android:textSize="20dp"
                android:gravity="end|center_vertical"
                android:textColor="@color/title_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:text="男"
                android:id="@+id/tv_list_sex"
                android:textColor="#fff"
                android:textSize="20dp"
                android:gravity="center_vertical"
                android:drawableEnd="@mipmap/ic_right"
                android:background="@drawable/shape_item_bg"
                android:layout_width="200dp"
                android:layout_height="40dp"/>

        </TableRow>
        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/face_upload_num"
                android:textSize="20dp"
                android:textColor="@color/title_text"
                android:gravity="end|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_list_card_number"
                android:textColor="#fff"
                android:maxLines="1"
                android:lines="1"
                android:maxLength="20"
                android:inputType="textCapWords|number"
                android:digits="@string/face_upload_filter_vcode"
                android:ellipsize="end"
                android:textColorHint="#fff"
                android:singleLine="true"
                android:textSize="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/shape_item_bg"
                android:layout_width="200dp"
                android:layout_height="40dp"/>

        </TableRow>
    </TableLayout>

    <Button
        android:text="提交"
        android:id="@+id/but_list_updata"
        android:background="@drawable/face_upload_robot"
        android:layout_width="150dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>